src/objects/Language__c.object
<CustomObject>
    <description>Languages (other than English) used for Translations.</description>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Direction that the text should read for this translation.</description>
        <inlineHelpText>Does this language read from Left-to-Right or Right-to-Left?</inlineHelpText>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ltr</fullName>
                    <default>true</default>
                    <label>ltr</label>
                </value>
                <value>
                    <fullName>rtl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISO_639_1__c</fullName>
        <description>2 Character Length for Localization codes, per the ISO.</description>
        <externalId>true</externalId>
        <inlineHelpText>2 Character Length for Localization codes, per the ISO.</inlineHelpText>
        <label>ISO 639-1</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_Family__c</fullName>
        <label>Language Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afro-Asiatic</fullName>
                </value>
                <value>
                    <fullName>Algonquian</fullName>
                </value>
                <value>
                    <fullName>Austroasiatic</fullName>
                </value>
                <value>
                    <fullName>Austronesian</fullName>
                </value>
                <value>
                    <fullName>Aymaran</fullName>
                </value>
                <value>
                    <fullName>Constructed</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Dené–Yeniseian</fullName>
                </value>
                <value>
                    <fullName>Dravidian</fullName>
                </value>
                <value>
                    <fullName>Eskimo–Aleut</fullName>
                </value>
                <value>
                    <fullName>Indo-European</fullName>
                </value>
                <value>
                    <fullName>Japonic</fullName>
                </value>
                <value>
                    <fullName>Koreanic</fullName>
                </value>
                <value>
                    <fullName>Language isolate</fullName>
                </value>
                <value>
                    <fullName>Mongolic</fullName>
                </value>
                <value>
                    <fullName>Niger–Congo</fullName>
                </value>
                <value>
                    <fullName>Nilo-Saharan</fullName>
                </value>
                <value>
                    <fullName>Northwest Caucasian</fullName>
                </value>
                <value>
                    <fullName>Quechuan</fullName>
                </value>
                <value>
                    <fullName>Sino-Tibetan</fullName>
                </value>
                <value>
                    <fullName>South Caucasian</fullName>
                </value>
                <value>
                    <fullName>Tai–Kadai</fullName>
                </value>
                <value>
                    <fullName>Tupian</fullName>
                </value>
                <value>
                    <fullName>Turkic</fullName>
                </value>
                <value>
                    <fullName>Uralic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Language</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ISO_639_1__c</columns>
        <columns>Direction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_c</fullName>
        <columns>NAME</columns>
        <columns>Direction__c</columns>
        <columns>ISO_639_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All+</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>